# BetaFramework-Linux

./: .gitignore  BetaFramework.sln  CMakeLists.txt  README.md  xcopy commands.txt
Assets/Animations/: MonkeyIdle.txt  MonkeyJump.txt  MonkeyWalk.txt
Assets/Levels/: Platformer.txt
Assets/Meshes/: Mesh16x6.txt  MeshArena.txt  MeshAsteroid.txt  MeshBullet.txt  MeshSpaceship.txt
Assets/Objects/: Arena.txt  Asteroid.txt  Background.txt  Bullet.txt  Coin.txt  Enemy.txt  Monkey.txt  PlayerShip.txt  Spikes.txt  Tilemap.txt  Walls.txt
Assets/Shaders/: colorInverter.frag  fadeToBlack.frag
Assets/SpriteSources/: Asteroid.txt  Bullet.txt  Circle.txt  FontSheet.txt  Monkey.txt  Platform.txt  PlatformPalette.txt  SandBackground.txt  Ship.txt  Tilemap.txt  TilemapPalette.txt
Editor/: Editor.vcxproj  Editor.vcxproj.filters
Editor/Screenshots/: BetaMapEditor03.pdn
Editor/Source/: CameraController.cpp  CameraController.h  EditorLevel.cpp  EditorLevel.h  GridDraw.cpp  GridDraw.h  Main.cpp  ObjectPlacer.cpp  ObjectPlacer.h  TilePalette.cpp  TilePalette.h  TilePlacer.cpp  TilePlacer.h  stdafx.cpp  stdafx.h
Examples/: Examples.vcxproj  Examples.vcxproj.filters
Examples/Source/: Archetypes.cpp  Archetypes.h  Asteroid.cpp  Asteroid.h  Asteroids.cpp  Asteroids.h  Behaviors.h  Button.cpp  Button.h  (+37 more)
Examples_C/: Examples_C.vcxproj  Examples_C.vcxproj.filters
HighLevelAPI/: HighLevelAPI.vcxproj  HighLevelAPI.vcxproj.filters
LowLevelAPI/: LowLevelAPI.vcxproj  LowLevelAPI.vcxproj.filters
LowLevelAPI_C/: LowLevelAPI_C.vcxproj  LowLevelAPI_C.vcxproj.filters
docs/: make.bat
(+241 files in other folders)
